--- a/Floreo-Interview-Demo/Packages/manifest.json
+++ b/Floreo-Interview-Demo/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "2.3.16",
     "com.unity.ai.navigation": "2.0.6",
     "com.unity.burst": "1.8.19",
     "com.unity.cinemachine": "2.10.3",
