--- a/Floreo-Interview-Demo/Packages/manifest.json
+++ b/Floreo-Interview-Demo/Packages/manifest.json
@@ -12,6 +12,8 @@
     "com.unity.inputsystem": "1.13.1",
     "com.unity.mathematics": "1.3.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.playmode": "1.3.3",
+    "com.unity.netcode.gameobjects": "2.2.0",
     "com.unity.nuget.mono-cecil": "1.11.4",
     "com.unity.package-validation-suite": "0.22.0-preview",
     "com.unity.render-pipelines.core": "17.0.4",
